style.css
body{
  background-color: #47596B;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin:0;
  padding:0;
}

html, body{
  height: 100%;
}

h1{
  color: #54A0EB;
  font-family: 'Montserrat', sans-serif;
}

.calculator{
  width: 400px;
  display: flex;
  flex-direction: column;
  border: black solid 2px;
  border-radius: 24px;
  background-color: #142638;
  box-shadow: 0 0px 20px 2px rgba(17, 17, 17, .4);
}

.outerDisplay{
  display: flex;
  text-align: right;
}

.display{
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  float: right;
  width: 400px;
  height: 250px;
  padding-bottom: 48px;
  padding-right: 24px;
  font-size: 48px;
  color: rgb(255, 255, 255);
  font-family: 'Montserrat', sans-serif;
}

.middle-line{
  background-color: #3277a3;
  width: 400px;
  height: 2px;
}

.bottom-portion{
  border-radius: 24px;
  height: 600px;
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 36px;
  background-color: #0b2742;
}

button{
  width: 100px;
  height: 120px;
  font-family: 'Montserrat', sans-serif;
  background-color: #0b2742;
  border: none;
  font-size: 24px;
  border-radius: 3px;
}

.zero{
  width: 200px;
}

.percentage,
.operator{
  color: #387ba7;
}

.digit{
  color: #b1c1cc;
}

.equality{
  background-color: #0abaf1;
  color: white;
}

.clear{
  color: #c98c6a;
}

.delete{
  color:rgb(139, 138, 138)
}

button:hover{
  background-color: #0F5480;
}

